[gd_scene load_steps=5 format=3 uid="uid://dw3jcndlyc6hg"]

[ext_resource type="Script" uid="uid://cnc3dswcbd0yr" path="res://Menus/Options Menu/confirmation_container.gd" id="1_fwfqp"]
[ext_resource type="FontFile" uid="uid://bhrrpw6ymft27" path="res://Font/ARIAL.TTF" id="2_i8iky"]
[ext_resource type="FontFile" uid="uid://b78damunkxgsq" path="res://Font/impact.ttf" id="3_cwh0f"]
[ext_resource type="FontFile" uid="uid://cf1ukv41uov1k" path="res://Font/Jumpman.ttf" id="4_cwh0f"]

[node name="ConfirmationContainer" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fwfqp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.5
offset_top = -69.5
offset_right = 154.5
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7
alignment = 1

[node name="extra_details" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_i8iky")
text = "This will permanently erase the requested 
features....."
horizontal_alignment = 1

[node name="Question_label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_cwh0f")
theme_override_font_sizes/font_size = 34
text = "Are you sure?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="button_yes" type="Button" parent="VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cwh0f")
theme_override_font_sizes/font_size = 50
text = "Yes"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="button_no" type="Button" parent="VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("4_cwh0f")
theme_override_font_sizes/font_size = 50
text = "No"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -94.0
offset_right = 211.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.489152, 0, 0.110857, 1)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_yes" to="." method="_on_button_yes_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/button_no" to="." method="_on_button_no_pressed"]
